--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,8 +7,14 @@ services:
     volumes:
       - db:/var/lib/postgresql/data
     environment:
-      POSTGRES_PASSWORD: "${PG_PASS}"
-  
+      - POSTGRES_PASSWORD=${PG_PASS}
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready", "-d", "db_prod"]
+      interval: 5s
+      timeout: 60s
+      retries: 5
+      start_period: 1s
+
   web:
     container_name: cybellum_web
     build:
@@ -17,11 +23,15 @@ services:
     environment:
       - FLASK_APP=/app/app.py
       - FLASK_ENV
+    env_file:
+      - .env
+
     command: flask run -h 0.0.0.0 -p 5000
     ports:
       - "5000:5000"
     depends_on:
-      - db
+      db:
+        condition: service_healthy
 
 volumes:
   db:
